<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>
            <CheckBox
                android:id="@+id/cb_max_rssi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_params_bar_text_size"
                style="@style/CheckBox"
                android:text="@string/uhf_record_max_rssi"/>

            <CheckBox
                android:visibility="gone"
                android:id="@+id/cb_mutip_tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_params_bar_text_size"
                style="@style/CheckBox"
                android:text="@string/uhf_multip_tags"/>

            <CheckBox
                android:id="@+id/cb_rssi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_params_bar_text_size"
                style="@style/CheckBox"
                android:text="RSSI"/>

            <CheckBox
                android:id="@+id/cb_frequence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_params_bar_text_size"
                style="@style/CheckBox"
                android:text="@string/uhf_freq"/>

            <CheckBox
                android:id="@+id/cb_tid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_params_bar_text_size"
                style="@style/CheckBox"
                android:text="@string/uhf_tag_tid"/>
        </TableRow>
        <TableRow>

            <!--盘点模式-->
            <!--功率-->

            <CheckBox
                android:id="@+id/cb_protocal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_params_bar_text_size"
                android:text="@string/uhf_protocol"
                style="@style/CheckBox"
                android:visibility="gone"/>

        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/content_power_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/content_ant_power"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center_vertical"
                android:text="@string/read_power"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/spinner_read_power"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/item_corner_blue"
                android:background="@drawable/spinner_selector"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center_vertical"
                android:text="@string/write_power"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/spinner_write_power"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/item_corner_blue"
                android:background="@drawable/spinner_selector"/>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/content_policy_region"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:text="@string/inv_compose_policy"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/spinner_inv_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:backgroundTint="@color/item_corner_blue"
            android:background="@drawable/spinner_selector"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:text="@string/region_choose"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/spinner_region"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:backgroundTint="@color/item_corner_blue"
            android:background="@drawable/spinner_selector"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_total_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_params_bar_text_size"
            android:text="@string/uhf_total_count"/>

        <TextView
            android:id="@+id/tv_total_tags_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_params_bar_text_size"
            android:text="@string/uhf_total_tag"/>

        <TextView
            android:id="@+id/tv_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_params_bar_text_size"
            android:text="@string/uhf_inv_speed"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_params_bar_text_size"
            android:text="Time:"/>

        <EditText
            android:id="@+id/et_time"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="number"
            android:textSize="@dimen/dimen_params_bar_text_size"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_params_bar_text_size"
            android:text="S"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_params_bar_text_size"
            android:text="@string/uhf_read_time"/>

        <com.nlscan.uhf.demo.util.view.TimerTextView
            android:id="@+id/tv_inv_span_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:minWidth="20dp"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_params_bar_text_size"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_params_bar_text_size"
            android:text="S"/>

        <TextView
            android:id="@+id/tv_battery_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:text="@string/battery_temperature"/>

    </LinearLayout>

</LinearLayout>