<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <include
        android:id="@+id/header"
        layout="@layout/layout_inv_header" />

    <Button
        android:id="@+id/btn_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimens_10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/do_counnect"/>

    <LinearLayout
        android:id="@+id/ll_title_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="@dimen/dimens_32dp"
            android:text="@string/bound_devices"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="@dimen/dimens_16dp"
            android:text="@string/bound_devices_summary"/>

    </LinearLayout>

    <ListView
        android:id="@+id/lv_devices"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dimens_10dp"
        android:padding="@dimen/dimens_10dp"
        android:background="@drawable/list_view_rectangle_bg"
        android:layout_below="@id/ll_title_summary"
        android:layout_above="@id/btn_connect"/>

    <TextView
        android:id="@+id/empty_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_below="@id/ll_title_summary"
        android:layout_above="@id/btn_connect"
        android:text="@string/no_bound_device"/>

</RelativeLayout>