<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <include
        android:id="@+id/header"
        layout="@layout/layout_inv_header" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="@dimen/dimens_32dp"
        android:text="@string/uhf_devices"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="@dimen/dimens_16dp"
        android:text="@string/uhf_devices_summary"/>

    <Button
        android:id="@+id/btn_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dimens_10dp"
        android:layout_gravity="right"
        android:textSize="@dimen/dimens_16dp"
        android:text="@string/do_counnect"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimens_10dp"
            android:textSize="@dimen/dimens_16dp"
            android:text="@string/target_uhf_device"/>

        <TextView
            android:id="@+id/tv_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimens_10dp"
            android:textStyle="bold"
            android:textSize="@dimen/dimens_16dp"
            android:text="none"/>

    </LinearLayout>


    <ListView
        android:id="@+id/lv_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimens_10dp"
        android:padding="@dimen/dimens_10dp"
        android:background="@drawable/list_view_rectangle_bg"/>



</LinearLayout>